--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-slick": "^0.30.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
